--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="assets/css/styles.css" />
+
     <title>Project Manager</title>
   </head>
   <body>
     <header></header>
     <main></main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
