--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <title>Project Manager</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1></h1>
+    </header>
     <main></main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/js/script.js"></script>
