--- a/index.html
+++ b/index.html
@@ -29,23 +29,19 @@
             <th scope="col">Name</th>
             <th scope="col">Type</th>
             <th scope="col">Date</th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <td>Larry</td>
-            <td>the Bird</td>
-            <td>@twitter</td>
+            <td>Test Project</td>
+            <td>MERN Stack</td>
+            <td>06/30/2022</td>
+            <td>
+              <button type="button" class="btn btn-danger delete">
+                Delete
+              </button>
+            </td>
           </tr>
         </tbody>
       </table>
