--- a/index.html
+++ b/index.html
@@ -22,7 +22,33 @@
       <h2 id="date-time"></h2>
     </header>
     <main class="container-fluid h-75">
-      <form action="submit"></form>
+      <form action="submit">
+        <div class="form-group">
+          <label for="project-name">Project Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="project-name"
+            placeholder="Enter project name"
+          />
+        </div>
+        <div class="form-group">
+          <label for="project-type">Project Type</label>
+          <input
+            type="text"
+            class="form-control"
+            id="project-type"
+            placeholder="Enter project type"
+          />
+        </div>
+        <div class="form-check">
+          <input type="text" class="form-check-input" id="project-date" />
+          <label class="form-check-label" for="project-date"
+            >Enter Project Date</label
+          >
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
       <table class="table">
         <thead>
           <tr>
