--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
             placeholder="Enter project type"
           />
         </div>
-        <div class="form-check">
-          <input type="text" class="form-check-input" id="project-date" />
-          <label class="form-check-label" for="project-date"
-            >Enter Project Date</label
-          >
+        <div class="form-group">
+          <label for="project-date">Project Date</label>
+          <input type="date" class="form-control" id="project-date" />
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
