--- a/index.html
+++ b/index.html
@@ -22,32 +22,54 @@
       <h2 id="date-time"></h2>
     </header>
     <main class="container-fluid h-75">
-      <form action="submit">
-        <div class="form-group">
-          <label for="project-name">Project Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="project-name"
-            placeholder="Enter project name"
-          />
+      <div class="card">
+        <div class="card-body">
+          <form action="submit" class="col-4">
+            <div class="form-group row mb-3">
+              <label class="col-sm-3 col-form-label" for="project-name"
+                >Project Name</label
+              >
+              <div class="col-sm-9">
+                <input
+                  type="text"
+                  class="form-control col-9"
+                  id="project-name"
+                  placeholder="Enter project name"
+                />
+              </div>
+            </div>
+            <div class="form-group row mb-3">
+              <label class="col-sm-3 col-form-label" for="project-type"
+                >Project Type</label
+              >
+              <div class="col-sm-9">
+                <input
+                  type="text"
+                  class="form-control col-9"
+                  id="project-type"
+                  placeholder="Enter project type"
+                />
+              </div>
+            </div>
+            <div class="form-group row mb-3">
+              <label class="col-sm-3 col-form-label" for="project-date"
+                >Project Date</label
+              >
+              <div class="col-sm-9">
+                <input
+                  type="date"
+                  class="form-control col-9"
+                  id="project-date"
+                />
+              </div>
+            </div>
+          </form>
         </div>
-        <div class="form-group">
-          <label for="project-type">Project Type</label>
-          <input
-            type="text"
-            class="form-control"
-            id="project-type"
-            placeholder="Enter project type"
-          />
+        <div class="card-footer">
+          <button type="submit" class="btn btn-primary">Add Project</button>
         </div>
-        <div class="form-group">
-          <label for="project-date">Project Date</label>
-          <input type="date" class="form-control" id="project-date" />
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-      <table class="table">
+      </div>
+      <table class="table col-8">
         <thead>
           <tr>
             <th scope="col">Name</th>
